9508
Duplicate of SI-5044.

If you compile with 2.10.1 instead of 2.10.0, you will get a better error message.
{noformat}
./7381.scala:9: error: not found: value value
        (value, conf) => conf.copy(name = value)
                                          ^
./7381.scala:9: warning: type-checking the invocation of method copy checks if the named argument expression 'name = ...' is a valid assignment
in the current scope. The resulting type inference error (see above) can be fixed by providing an explicit type in the local definition for name.
        (value, conf) => conf.copy(name = value)
                                        ^
one warning found
one error found
{noformat}
